--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,7 @@ theme: just-the-docs
 
 url: https://just-the-docs.github.io
 
-search_enabled: true
+search_enabled: false
+
+aux_links:
+  Template Repository: https://github.com/just-the-docs/just-the-docs-template
