refactor: update page title

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Summary Sheet - Master's programme in Virtual Reality and Augmented Reality Appendix
+title: Summary Sheet Appendix
 description: A github pages site for hosting the syllabus index for the LU AR/VR programme summary sheet
 theme: just-the-docs
 
